fixing wrapping bug and organizing

--- a/css/site.css
+++ b/css/site.css
@@ -59,3 +59,7 @@ table.table-layout-fixed {
 .h-0 {
   height: 0px;
 }
+
+.no-wrap {
+  white-space: nowrap;
+}
